// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`selectors getPrivateTicketNavbarElements should properly display a section view without section 1`] = `
[
  {
    "data": {
      "id": 5,
      "section_id": null,
      "type": "ticket-list",
      "visibility": "private",
    },
    "type": "view",
  },
  {
    "data": {
      "id": 123,
      "section_id": 3,
      "type": "ticket-list",
      "visibility": "private",
    },
    "type": "view",
  },
]
`;

exports[`selectors getPrivateTicketNavbarElements should return the elements 1`] = `
[
  {
    "data": {
      "id": 5,
      "section_id": null,
      "type": "ticket-list",
      "visibility": "private",
    },
    "type": "view",
  },
  {
    "children": [
      {
        "id": 123,
        "section_id": 3,
        "type": "ticket-list",
        "visibility": "private",
      },
    ],
    "data": {
      "id": 3,
      "private": true,
    },
    "type": "section",
  },
]
`;

exports[`selectors getPublicTicketNavbarElements should display legacy system view in Shared views category 1`] = `
[
  {
    "data": {
      "category": "system",
      "id": 12,
      "name": "Trash",
      "type": "ticket-list",
      "visibility": "shared",
    },
    "type": "view",
  },
]
`;

exports[`selectors getPublicTicketNavbarElements should properly display a section view without section 1`] = `
[
  {
    "data": {
      "id": 10,
      "section_id": 1,
      "type": "ticket-list",
      "visibility": "public",
    },
    "type": "view",
  },
  {
    "data": {
      "id": 2,
      "section_id": 1,
      "type": "ticket-list",
      "visibility": "public",
    },
    "type": "view",
  },
  {
    "data": {
      "id": 4,
      "section_id": null,
      "type": "ticket-list",
      "visibility": "public",
    },
    "type": "view",
  },
  {
    "data": {
      "id": 1,
      "section_id": 2,
      "type": "ticket-list",
      "visibility": "public",
    },
    "type": "view",
  },
]
`;
